# Sensor-Watch

./: Doxyfile  make.mk  rules.mk
movement/: movement_config.h  movement_faces.h
movement/watch_faces/complication/: timer_face.c
rust/: Cargo.toml  README.adoc
rust/.cargo/: config
rust/faces/: Cargo.toml  cbindgen.toml  sensor_watch_rs.h
rust/faces/src/: face.rs  hi_rust.rs  kitchen_timer_face.rs  lib.rs  ships_bell_lite.rs
rust/sensor_watch_rs/: .gitignore  Cargo.toml  cbindgen.toml  sensor_watch_rs.h
rust/sensor_watch_rs/derive/: Cargo.toml
rust/sensor_watch_rs/derive/src/: lib.rs
rust/sensor_watch_rs/src/: face.rs  lib.rs  notes.rs  time.rs
rust/sensor_watch_rs/src/display/: indicator.rs
rust/sensor_watch_sys/: README.adoc  build.rs  build.sh  wrapper.h
rust/sensor_watch_sys/.cargo/: config
rust/sensor_watch_sys/src/: lib.rs
sensor_watch_rs/: Cargo.toml  README.md  bindings.h  build.rs  build.sh  cbindgen.toml  sensor_watch_rs.h  wrapper.h
sensor_watch_rs/derive/: Cargo.toml
sensor_watch_rs/derive/src/: lib.rs
sensor_watch_rs/src/: face.rs  hi_rust.rs  kitchen_timer_face.rs  lib.rs
sensor_watch_sys/: Cargo.toml  README.adoc  build.rs  cbindgen.toml  wrapper.h
sensor_watch_sys/src/: lib.rs  time.rs
sensor_watch_sys/src/display/: indicator.rs
watch-library/simulator/: shell.html
